src/objects/Submission_Meta_Data__c.object
<CustomObject>
    <description>Contains the data that every submission requires. Every submission will have one of these irrelevant of the submission object that corresponds to the submission</description>
    <fields>
        <fullName>Customer_Care_Review_Comment__c</fullName>
        <description>Customer care comments on the submission</description>
        <label>Customer Care Review Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Care_Review_Status__c</fullName>
        <description>The status of the survey according to the customer care team</description>
        <label>Customer Care Review Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Reviewed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>First Level Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flagged</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_Collection_Review_Comment__c</fullName>
        <description>The comments of the data collection team</description>
        <label>Data Collection Review Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Data_Collection_Review_Status__c</fullName>
        <description>The status of the survey according to the data collection team</description>
        <label>Data Collection Review Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Reviewed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flagged</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Handset_Submit_Time__c</fullName>
        <description>The time that the submission was entered on the handset</description>
        <label>Handset Submit Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Interview_Accuracy__c</fullName>
        <description>The accuracy of the gps stamp that the survey was carried out</description>
        <label>Interview Accuracy</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interview_Altitude__c</fullName>
        <description>The altitude that the survey was carried out at</description>
        <label>Interview Altitude</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interview_GPS_Timestamp__c</fullName>
        <description>The time that the survey was carried out</description>
        <label>Interview GPS Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Interview_Latitude__c</fullName>
        <description>The latitude that the survey was carried out</description>
        <label>Interview Latitude</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interview_Longitude__c</fullName>
        <description>The longitude that the survey was conducted at</description>
        <label>Interview Longitude</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interviewee_Distance_Km__c</fullName>
        <label>Interviewee Distance (Km)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interviewee_Name__c</fullName>
        <formula>Interviewee__r.First_Name__c &amp;
IF(ISBLANK(Interviewee__r.First_Name__c),&quot;&quot;, &quot; &quot;) &amp;
 Interviewee__r.Middle_Name__c &amp;
IF(ISBLANK(Interviewee__r.Middle_Name__c),&quot;&quot;, &quot; &quot;) &amp;
 Interviewee__r.Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interviewee Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interviewee__c</fullName>
        <description>The person answering the survey</description>
        <label>Interviewee</label>
        <referenceTo>Person__c</referenceTo>
        <relationshipName>Submission_Meta_Datas1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interviewer_Distance_Km__c</fullName>
        <description>Captures distance between interviewer and interviewee</description>
        <label>Interviewer Distance (Km)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interviewer_Name__c</fullName>
        <formula>Interviewer__r.First_Name__c &amp;
IF(ISBLANK( Interviewer__r.First_Name__c ),&quot;&quot;, &quot; &quot;) &amp;
Interviewer__r.Middle_Name__c &amp;
IF(ISBLANK( Interviewer__r.Middle_Name__c ),&quot;&quot;, &quot; &quot;) &amp;
Interviewer__r.Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interviewer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interviewer__c</fullName>
        <description>The person who conducted the survey</description>
        <label>Interviewer</label>
        <referenceTo>Person__c</referenceTo>
        <relationshipName>Submission_Meta_Datas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Draft__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this if the submission was made when the survey was in draft status.</description>
        <label>Is Draft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Poverty_Scorecard__c</fullName>
        <description>The poverty scorecard of the interviewee at the time of the submission</description>
        <label>Poverty Scorecard</label>
        <referenceTo>Poverty_Scorecard__c</referenceTo>
        <relationshipName>Submission_Meta_Datas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Result_Hash__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>unique hash created using SHA1 to ensure that this submission has not been entered into the system already</description>
        <label>Result Hash</label>
        <length>160</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Submission_Accuracy__c</fullName>
        <description>The accuracy of the gps location for the survey submission point</description>
        <label>Submission Accuracy (Meters)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Submission_Altitude__c</fullName>
        <description>The altitude that the survey was submitted from</description>
        <label>Submission Altitude (Meters)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Submission_GPS_Timestamp__c</fullName>
        <description>The timestamp that the survey submission gps location was taken</description>
        <label>Submission GPS Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Submission_Latitude__c</fullName>
        <description>The latitude that the survey was submitted from</description>
        <label>Submission Latitude</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Submission_Longitude__c</fullName>
        <description>The longitude that the survey was submitted from</description>
        <label>Submission Longitude</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Submission_Size__c</fullName>
        <description>The size in bytes of the submission</description>
        <label>Submission Size (Bytes)</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Survey_Name__c</fullName>
        <formula>Survey__r.Survey_Name__c</formula>
        <label>Survey Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <description>The survey that this submission is for</description>
        <label>Survey</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipName>Submission_Meta_Datas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unregistered_Farmer_Id__c</fullName>
        <description>The id of a farmer who was unregistered at the time of submission. This may be due to the survey  being submitted before the registration was or because the farmer does not exist. This allows us to clean up the data and add the correct farmer if needed</description>
        <label>Unregistered Farmer Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Submission</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SMD-{0000000000}</displayFormat>
        <label>Submission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Submissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>